--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ POSTGRES_PASSWORD="Ib9qsAn1dxtE"
 POSTGRES_DATABASE="verceldb"
 
 # `openssl rand -base64 32`
-AUTH_SECRET=
-AUTH_URL=http://localhost:3000/api/auth
+# AUTH_SECRET=
+# AUTH_URL=http://localhost:3000/api/auth
